<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_width="match_parent"
                                       android:layout_height="match_parent"
                                       android:orientation="vertical"
                                       tools:context=".updateProfile.view.FragUpdateProfile">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="vertical"
            android:id="@+id/linLayoutRoot">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:orientation="horizontal">

                <ImageView
                        android:id="@+id/imgViewEditProfilePic"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_gray"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_profile"/>

                <ImageButton
                        android:id="@+id/btnAddProfilePic"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="-30dp"
                        android:layout_marginLeft="-30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/circle_red"
                        android:src="@drawable/ic_add"/>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSubmit"
                        style="@style/ButtonTheme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:text="@string/btnSignUp"
                        app:cornerRadius="20dp"/>

            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/required"
                    android:textColor="@color/colorLightGray"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutDisplayName"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintDisplayName"
                    app:counterEnabled="true"
                    app:counterMaxLength="256"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtDisplayName"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintAboutMe"
                    app:counterEnabled="true"
                    app:counterMaxLength="5000"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtAboutMe"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintBirthday"
                    app:endIconDrawable="@drawable/ic_today"
                    app:endIconMode="custom"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtBirthday"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:longClickable="false"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintLocation"
                    app:errorEnabled="true">

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/autoCompleteTxtViewLocation"
                        style="@style/AutoCompleteTextViewTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:completionThreshold="1"
                        android:textSize="17sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintRealName"
                    app:counterEnabled="true"
                    app:counterMaxLength="256"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtRealName"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutHeight"
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintHeight"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtHeight"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hintOccupation"
                    app:counterEnabled="true"
                    app:counterMaxLength="256"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtInputEdtTxtOccupation"
                        style="@style/TextInputEditTextTheme"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Layout for adding dynamic single selection views -->
        <LinearLayout
                android:id="@+id/singleChoiceItemsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

    </LinearLayout>

</ScrollView>