<resources>
    <string name="app_name">SparkEditableProfile</string>
    <string name="required">*Required</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="hintDisplayName">Display name*</string>
    <string name="hintAboutMe">AboutMe</string>
    <string name="hintBirthday">Birthday*</string>
    <string name="hintLocation">Location*</string>
    <string name="hintRealName">Real name*(Private Information)</string>
    <string name="hintHeight">Height*</string>
    <string name="hintOccupation">Occupation(Private Information)</string>
    <string name="btnOK">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="profile">Profile</string>
    <string name="displayName">Farhad Deghat</string>
    <string name="location">Shiraz, Iran</string>
    <string name="editProfile">Edit profile</string>
    <string name="aboutMe">hello my name is Farhad. I\'ve been developing android applications for 4 years.</string>
    <string name="birthday">25 Jun 1988</string>
    <string name="height">167</string>
    <string name="religion">Religion</string>
    <string name="religiousValue">None</string>
    <string name="submitting">submitting profile …</string>
    <string name="emptyIsNotAllowed">This is a required field</string>
    <string name="charactersNotAllowed">Some characters are not allowed</string>
    <string name="tooLongError">It\'s too long</string>
    <string name="youngerThan18">you must be at least %d years old</string>
    <string name="invalidLocation">This field must be a valid city name</string>
</resources>
